[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "primaryschool"
description = "primary school knowledge games"
readme = "README.md"
requires-python = ">=3.6"
keywords = [ "education", "game",]
classifiers = [ "Programming Language :: Python", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.7", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9", "Programming Language :: Python :: 3.10", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent", "Intended Audience :: Students", "Topic :: Games",]
dependencies = [ "pygame", "appdirs", "toml",]
version = "0.0.24"
[[project.authors]]
name = "larryw3i"
email = "larryw3i@163.com"

[project.license]
text = "MIT"

[project.urls]
Source = "https://github.com/larryw3i/primaryschool"

[project.gui-scripts]
primaryschool = "primaryschool"

[tool.setuptools]
include-package-data = true

[tool.setuptools.exclude-package-data]
"*" = [ "*.pot", "*.po",]

[tool.setuptools.package-data]
"*" = [ "*.mo",]

[tool.setuptools.packages.find]
where = [ "src",]
